resolved the collapsible not collapsing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 . body {
-
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -64,7 +64,7 @@ nav .brand-logo {
     margin: 5px 5px;
     padding: 0 0.5em;
 }
-    
+ 
     .trips_header {
     margin-top: 5px;
     margin-left: 20px;
